# e_ductus

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
chat/: consumers.py  urls.py  views.py
e_ductus/: db.sqlite3  fields.py  manage.py  models.py  pyproject.toml  settings.py  urls.py  views.py
e_ductus/api/: models.py  serializers.py  urls.py  views.py
e_ductus/api/migrations/: 0001_initial.py
e_ductus/e_ductus/: apps.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
e_ductus/e_ductus/migrations/: 0002_course.py  0007_course_students.py
e_ductus/e_ductus/static/css/: base.css
e_ductus/e_ductus/templates/: base.html  home.html
e_ductus/e_ductus/templates/courses/course/: detail.html
e_ductus/e_ductus/templates/courses/manage/course/: delete.html  form.html  list.html
e_ductus/e_ductus/templates/registration/: logged_out.html
e_ductus/fixtures/: subjects.json
e_ductus/frontend/: babel.config.json  package-lock.json  package.json  urls.py
e_ductus/frontend/src/components/: App.js
e_ductus/frontend/src/store/actions/: actionTypes.js  auth.js
e_ductus/frontend/static/frontend/: main.js  main.js.LICENSE.txt
e_ductus/migrations/: 0001_initial.py  0003_content_module.py  0004_file_image_text_video.py  0005_auto_20210126_1013.py  0006_auto_20210205_1949.py  0008_auto_20210223_0924.py
e_ductus/static/css/: base.css
e_ductus/templates/: base.html
e_ductus/templates/e_ductus/registration/: logged_out.html  login.html
e_ductus/templates/e_ductus/students/course/: detail.html
e_ductus/tests/: conftest.py  test_e_ductus.py
tests/: conftest.py  (+1 more)
(+3 files in other folders)
